--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@
     box-sizing: border-box;
 }
 
+html{
+    width: 100%;
+    height: 100%;
+}
 body{
+    width: 100%;
+    height: 100%;
     padding: 5vh;
 }
 
@@ -41,6 +47,25 @@ main{
     transition: opacity 0.5s ease;
     opacity: 1;
     border: 1px solid black
+}
+
+#carregando{
+    transition: 0.5s ease-out;
+    background-color: snow;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+div h1{
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 3vh;
 }
 
 footer{
